# 0.1.4
 - added cache support in hypothesis space

# 0.1.3
 - added pair from pylo

# 0.1.2
  - added bottom clause based refinement

# 0.1.1
  - updated to Pylo 0.3.2