@@ -1,5 +1,7 @@
 # 0.1.4
  - added cache support in hypothesis space
+ - hypothesis space returns recursions with Predicate as head_constructor
+ - fixed recursion generation
 
 # 0.1.3
  - added pair from pylo
